--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve -c ./scripts/dev.js",
+    "dev": "npm run dev:build-deps && npm run dev:src",
+    "dev:src": "webpack serve -c ./scripts/dev.js",
+    "dev:build-deps": "webpack -c ./scripts/deps.js",
     "build": "webpack -c ./scripts/build.js"
   },
   "author": "",
@@ -18,18 +20,20 @@
     "@webpack-cli/serve": "^1.5.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
+    "css-minimizer-webpack-plugin": "^3.0.2",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
-    "mini-css-extract-plugin": "^2.1.0",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.4",
     "typescript": "^4.3.5",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "antd": "^4.16.10",
     "idraw": "^0.1.0-alpha.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
