--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-minimizer-webpack-plugin": "^3.0.2",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
+    "mini-css-extract-plugin": "^2.2.0",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.4",
     "typescript": "^4.3.5",
