--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@idraw/types": "^0.1.0-alpha.1",
     "antd": "^4.16.10",
     "idraw": "^0.1.0-alpha.0",
     "react": "^17.0.2",
