--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@idraw/types": "^0.1.0-alpha.1",
+    "@idraw/types": "^0.1.0",
     "antd": "^4.16.10",
-    "idraw": "^0.1.0-alpha.0",
+    "idraw": "^0.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "requirejs": "^2.3.6",
