--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "files": [
-    "dist"
+    "dist",
+    "bin"
   ],
   "scripts": {
     "dev": "npm run dev:build-deps && npm run dev:src",
     "dev:src": "webpack serve -c ./scripts/dev.js",
     "dev:build-deps": "webpack -c ./scripts/deps.js",
-    "build": "webpack -c ./scripts/build.js"
+    "build": "webpack -c ./scripts/build.js",
+    "dev:bin": "node ./bin/index.js dev"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +20,7 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@types/node": "^16.4.13",
     "@vue/babel-plugin-jsx": "^1.0.6",
     "@vue/compiler-sfc": "^3.1.1",
     "@webpack-cli/serve": "^1.5.1",
@@ -27,6 +30,7 @@
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "mini-css-extract-plugin": "^2.2.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.4",
     "typescript": "^4.3.5",
