--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
+  "bin": "./bin/index.js",
   "files": [
     "dist",
     "bin"
   ],
   "scripts": {
     "dev": "npm run dev:build-deps && npm run dev:src",
-    "dev:src": "webpack serve -c ./scripts/dev.js",
+    "dev:src": "webpack --watch -c ./scripts/dev.js",
     "dev:build-deps": "webpack -c ./scripts/deps.js",
     "build": "webpack -c ./scripts/build.js",
     "dev:bin": "node ./bin/index.js dev"
