--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev:src": "webpack --watch -c ./scripts/dev.js",
     "dev:build-deps": "webpack -c ./scripts/deps.js",
     "build": "webpack -c ./scripts/build.js",
-    "dev:bin": "node ./bin/index.js dev"
+    "dev:bin": "nodemon ./bin/index.js dev serve"
   },
   "author": "",
   "license": "ISC",
@@ -32,6 +32,7 @@
     "less-loader": "^10.0.1",
     "mini-css-extract-plugin": "^2.2.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
+    "nodemon": "^2.0.12",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.4",
     "typescript": "^4.3.5",
@@ -39,13 +40,18 @@
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "@idraw/types": "0.1.3",
     "@idraw/util": "0.1.3",
+    "@koa/router": "^10.1.0",
     "antd": "^4.16.10",
+    "commander": "^8.1.0",
     "idraw": "0.1.3",
+    "koa": "^2.13.1",
+    "koa-static": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "requirejs": "^2.3.6",
