--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev:src": "webpack --watch -c ./scripts/dev.js",
     "dev:build-deps": "webpack -c ./scripts/deps.js",
     "build": "webpack -c ./scripts/build.js",
-    "dev:bin": "nodemon ./bin/index.js dev serve"
+    "dev:bin": "nodemon ./bin/index.js dev ./example/project/"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,9 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@types/koa": "^2.13.4",
+    "@types/koa-static": "^4.0.2",
+    "@types/koa__router": "^8.0.7",
     "@types/node": "^16.4.13",
     "@vue/babel-plugin-jsx": "^1.0.6",
     "@vue/compiler-sfc": "^3.1.1",
