--- a/package.json
+++ b/package.json
@@ -59,5 +59,10 @@
     "react-dom": "^17.0.2",
     "requirejs": "^2.3.6",
     "vue": "^3.1.1"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
