--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@types/koa-static": "^4.0.2",
     "@types/koa__router": "^8.0.7",
     "@types/node": "^16.4.13",
+    "@types/react": "^17.0.17",
+    "@types/react-color": "^3.0.5",
+    "@types/react-dom": "^17.0.9",
     "@vue/babel-plugin-jsx": "^1.0.6",
     "@vue/compiler-sfc": "^3.1.1",
     "@webpack-cli/serve": "^1.5.1",
