--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "koa": "^2.13.1",
     "koa-static": "^5.0.0",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "requirejs": "^2.3.6",
     "vue": "^3.1.1"
