--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "bin"
   ],
   "scripts": {
-    "dev": "npm run dev:build-deps && npm run dev:src",
-    "dev:src": "webpack --watch -c ./scripts/dev.js",
-    "dev:build-deps": "node ./scripts/deps.js",
-    "build": "webpack -c ./scripts/build.js",
+    "dev": "node ./scripts/dev.js",
     "dev:bin": "nodemon ./bin/index.js dev  -p 8081 ./example/project/"
   },
   "author": "chenshenhai",
@@ -28,24 +25,15 @@
     "@types/react": "^17.0.17",
     "@types/react-color": "^3.0.5",
     "@types/react-dom": "^17.0.9",
-    "@webpack-cli/serve": "^1.5.1",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.2.6",
-    "css-minimizer-webpack-plugin": "^3.0.2",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "glob": "^7.2.0",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
-    "mini-css-extract-plugin": "^2.2.0",
-    "node-polyfill-webpack-plugin": "^1.1.4",
     "nodemon": "^2.0.12",
+    "open": "^8.4.0",
     "style-loader": "^3.2.1",
-    "ts-loader": "^9.2.4",
-    "typescript": "^4.3.5",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^5.40.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.8.0",
-    "webpack-node-externals": "^3.0.0"
+    "typescript": "^4.5.5",
+    "vite": "^2.8.0"
   },
   "dependencies": {
     "@idraw/types": "0.2.0-alpha.25",
@@ -59,10 +47,5 @@
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2"
-  },
-  "browser": {
-    "fs": false,
-    "path": false,
-    "os": false
   }
 }
