--- a/package.json
+++ b/package.json
@@ -10,30 +10,35 @@
   ],
   "scripts": {
     "dev": "node ./scripts/dev.js",
+    "build": "node ./scripts/build.js",
     "dev:bin": "nodemon ./bin/index.js dev  -p 8081 ./example/project/"
   },
   "author": "chenshenhai",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "@types/koa": "^2.13.4",
-    "@types/koa-static": "^4.0.2",
-    "@types/koa__router": "^8.0.7",
-    "@types/node": "^16.4.13",
-    "@types/react": "^17.0.17",
-    "@types/react-color": "^3.0.5",
-    "@types/react-dom": "^17.0.9",
+    "@babel/core": "^7.16.7",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-decorators": "^7.16.7",
+    "@babel/plugin-proposal-export-default-from": "^7.16.7",
+    "@babel/plugin-proposal-export-namespace-from": "^7.16.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.7",
+    "@babel/plugin-transform-runtime": "^7.16.8",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/codemirror": "^5.60.5",
+    "@types/marked": "^4.0.1",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/wicg-file-system-access": "^2020.9.4",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "glob": "^7.2.0",
-    "less": "^4.1.1",
-    "less-loader": "^10.0.1",
-    "nodemon": "^2.0.12",
+    "less": "^4.1.2",
     "open": "^8.4.0",
-    "style-loader": "^3.2.1",
-    "typescript": "^4.5.5",
-    "vite": "^2.8.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "typescript": "^4.5.4",
+    "vite": "^2.7.12"
   },
   "dependencies": {
     "@idraw/types": "0.2.0-alpha.25",
